update console permissions ui (#1924)
* Make permissions sections as collapsibles with tooltips
* Remove 'use same permission as select' type options from row permissions section
* Added clone section to apply same permission to any table-role-action
* Disable other subsections till row permissions are set

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -431,11 +431,11 @@ input {
   margin-left: 5px;
 }
 
-.mar_small_neg_left {
+.mar_neg_left {
   margin-left: -10px;
 }
 
-.mar_small_neg_left_1 {
+.mar_small_neg_left {
   margin-left: -5px;
 }
 
@@ -574,6 +574,10 @@ code {
 
 .padd_top {
   padding-top: 20px !important;
+}
+
+.disabled {
+  color: #999;
 }
 
 .select_option_height {
