--- a/docs/_static/hasura-custom.css
+++ b/docs/_static/hasura-custom.css
@@ -85,7 +85,7 @@ ul {
 
 [role="main"] {
   width: 90% !important;
-  max-width: 800px !important;
+  /*max-width: 800px !important;*/
   border: none !important;
   padding-bottom: 0 !important;
   padding-left: 15px !important;
@@ -835,7 +835,7 @@ article ol ol {
     position: absolute;
     z-index: 10;
     width: 90% !important;
-    max-width: 800px !important;
+    /*max-width: 800px !important;*/
     left: 0;
     right: 0;
     margin: 0 auto;
