remote relationship support for console (#5)
* added feedback on migration commands (close #1410) (#1931)

* firebase2graphql (v0.0.2): support array types in firebase json (close #1829) (#1900)

* improve console error page (close #272) (#1890)

* add nextjs 8 jwt sample app (#1943)

* persist queries in GraphiQL (closes #1894) (#1903)

* add realtime chat sample app with vue (#1885)

* fix update_event_trigger query not persisting the changes (#1950)

fix #1949

* mention required key length for HMAC encryption to user (#1956)

Following on from a discussion in discord, a small tweak to make the required key length for a HMAC key more obvious

* fix input argument types for custom SQL functions (close #1952) (#1953)

* run graphql tests on both http and websocket; add parallelism (close #1868) (#1921)

Examples 
1)  `
pytest --hge-urls "http://127.0.0.1:8080" --pg-urls "postgresql://admin@127.0.0.1:5432/hge_tests" -vv
`
2)  `pytest --hge-urls "http://127.0.0.1:8080"   "http://127.0.0.1:8081" --pg-urls "postgresql://admin@127.0.0.1:5432/hge_tests"  "postgresql://admin@127.0.0.1:5432/hge_tests2" -vv
`
### Solution and Design
<!-- How is this issue solved/fixed? What is the design? -->
<!-- It's better if we elaborate -->
#### Reducing execution time of tests
- The Schema setup and teardown, which were earlier done per test method, usually takes around 1 sec. 
- For mutations, the model has now been changed to only do schema setup and teardown once per test class.
-  A data setup and teardown will be done once per test instead (usually takes ~10ms).
- For the test class to get this behaviour, one can can extend the class `DefaultTestMutations`. 
    - The function  `dir()` should be define which returns the location of the configuration folder.
    - Inside the configuration folder, there should be 
        - Files `<conf_dir>/schema_setup.yaml` and `<conf_dir>/schema_teardown.yaml`, which has the metadata query executed during

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -384,6 +384,9 @@ input {
 .remove_margin_bottom {
   margin-bottom: 0 !important;
 }
+.remove_margin_right {
+  margin-right: 0 !important;
+}
 
 .remove_margin {
   margin: 0 !important;
@@ -486,6 +489,10 @@ input {
 
 .add_mar_bottom_mid {
   margin-bottom: 10px;
+}
+
+.add_mar_bottom_small {
+  margin-bottom: 5px;
 }
 
 .add_mar_right {
@@ -1248,9 +1255,22 @@ code {
   width: 100% !important;
 }
 
+.wd150px {
+  width: 150px;
+}
+
+.cursorPointer {
+  cursor: pointer;
+}
+
+.display_flex_centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* container height subtracting top header and bottom scroll bar */
 $mainContainerHeight: calc(100vh - 50px - 25px);
 
 /* Min container width below which horizontal scroll will appear */
 $minContainerWidth: 1200px;
-
