Fix manual invocation modal, import connect

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -11,6 +11,10 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   -webkit-margin-after: 0;
 }
 
+.error_text {
+  color: #dc3545;
+}
+
 .graphSpinner {
   font-size: 40px;
   text-align: center;
