recover from inconsistent database state (closes #231) (#1863)

--- a/console/src/components/Services/Data/Metadata/Metadata.scss
+++ b/console/src/components/Services/Data/Metadata/Metadata.scss
@@ -24,9 +24,45 @@
   }
 }
 
+.metadata_h4 {
+  font-size: 16px;
+  font-weight: 600;
+}
+
 .margin_right {
   margin-right: 30px;
 }
 
 .export_metadata_wrapper {
+}
+.metadataStatusTable
+{
+  margin-top: 20px;
+  thead, tbody
+  {
+    tr
+    {
+      th
+      {
+        padding: 8px;
+        border-left: 1px solid #ccc;
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+      }
+      th:last-child
+      {
+        border-right: 1px solid #ccc;
+      }
+      td
+      {
+        padding: 8px;
+        border-left: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+      }
+      td:last-child
+      {
+        border-right: 1px solid #ccc;
+      }
+    }
+  }
 }
