--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -1232,6 +1232,46 @@ code {
   margin-right: 20px;
 }
 
+.wd750 {
+  width: 750px;
+}
+
+.iconCheck {
+  color: green;
+  font-size: 20px;
+}
+
+.iconCross {
+  color: #d9534f;
+  font-size: 20px;
+}
+
+.errorBanner {
+  top: 0;
+  z-index: 1000;
+}
+
+.fontStyleNormal {
+  font-style: normal;
+}
+
+.cursorPointer {
+  cursor: pointer;
+}
+
+.wd50percent {
+  width: 50%;
+}
+
+.alertDanger {
+  position: sticky;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -o-sticky;
+  position: -ms-sticky;
+  top: 0;
+  z-index: 1000;
+}
 .pkEditorWrapper {
   width: 325px;
   text-align: left;
