--- a/console/src/components/Main/Main.scss
+++ b/console/src/components/Main/Main.scss
@@ -1182,3 +1182,21 @@
   bottom: 50px;
   right: 0px;
 }
+
+.overlappingExclamation {
+  position: relative;
+  font-size: 12px;
+  bottom: 5px;
+  right: 2px;
+  color: #d9534f;
+}
+
+.iconWhiteBackground {
+  width: 5px;
+  background-color: #dedede;
+  height: 7px;
+  position: absolute;
+  top: 2px;
+  left: 4px;
+  z-index: -1;
+}
