github btn css fix

--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/src/components/styles.css
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/src/components/styles.css
@@ -426,7 +426,13 @@ img {
   }
 
   .navBarUL {
+    display: flex;
     padding-left: 16px;
+  }
+
+  .githubBtn {
+    display: flex;
+    align-items: center;
   }
 
   .navBarUL li a {
