--- a/console/src/components/Services/Data/TableModify/ModifyTable.scss
+++ b/console/src/components/Services/Data/TableModify/ModifyTable.scss
@@ -255,7 +255,7 @@ hr {
   background: #fff;
   border: 1px solid #ccc;
   margin-bottom: 15px;
-  overflow: auto;
+  // overflow: auto;
 
   .editPermsHeading {
     font-weight: bold;
