--- a/console/src/theme/bootstrap.overrides.scss
+++ b/console/src/theme/bootstrap.overrides.scss
@@ -265,7 +265,7 @@ select.form-control {
               display: flex;
               align-items: center;
               justify-content: center;
-              height: 100%;
+              height: 21px;
               width: 13px;
             }
           }
