add github links

--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/src/components/styles.css
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/src/components/styles.css
@@ -13,6 +13,23 @@ body {
   background-color: #ffcccc;
 }
 
+.githubIcon {
+  width: 15px;
+  margin-right: 5px;
+}
+
+.githubSection {
+  display: flex;
+  align-items: center;
+  color: #000;
+  opacity: 0.7;
+}
+
+.githubSection:hover {
+  text-decoration: none;
+  opacity: 1;
+}
+
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #fff !important;
 }
