Console new design update

--- a/console/src/components/UI/Button/Button.scss
+++ b/console/src/components/UI/Button/Button.scss
@@ -1,19 +1,75 @@
 .button {
-
+  border-radius: 2px;
+  font-weight: 700;
+  transition: all .2s ease-out;
+  &:hover
+  {
+    transition: all .2s ease-out;
+  }
 }
 
 .large {
-  
+  padding: 0 32px;
+  height: 48px;
 }
 
 .small {
-
+  height: 40px;
+  padding: 0 16px;
 }
 
 .primary {
 
+  background-color: #f8d721;
+  border: solid 1px #f8d721;
+  color: #484538;
+  &:hover {
+    box-shadow: 0 2px 8px 0 rgba(204, 177, 25, 0.4);
+  }
 }
-
 .secondary {
-
+  border: solid 1px #484538;
+  background-color: #ffffff;
+  color: #484538;
+  &:hover
+  {
+    background-color: #484538;
+    color: #fff;
+  }
+}
+.success
+{
+  background-color: #69cb43;
+  border: solid 1px #69cb43;
+  color: #fff;
+  &:hover {
+    box-shadow: 0 2px 8px 0 rgba(123, 179, 66, 0.4);
+  }
+}
+.danger
+{
+  background-color: #e53935;
+  border: solid 1px #e53935;
+  color: #fff;
+  &:hover {
+    box-shadow: 0 2px 8px 0 rgba(229, 57, 53, 0.4);
+  }
+}
+.warning
+{
+  background-color: #fdb02c;
+  border: solid 1px #fdb02c;
+  color: #fff;
+  &:hover {
+    box-shadow: 0 2px 8px 0 rgba(253, 176, 44, 0.4);
+  }
+}
+.info
+{
+  background-color: #1f88e5;
+  border: solid 1px #1f88e5;
+  color: #fff;
+  &:hover {
+    box-shadow: 0 2px 8px 0 rgba(31, 136, 229, 0.4);
+  }
 }
