--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -552,10 +552,6 @@ code {
   padding-bottom: 10px !important;
 }
 
-.ul_padd_left {
-  -webkit-padding-start: 15px;
-}
-
 .add_pad_bottom {
   padding-bottom: 20px;
 }
@@ -568,16 +564,22 @@ code {
   padding-right: 15px;
 }
 
+.padd_top {
+  padding-top: 20px !important;
+}
+
+
 .clear_fix {
   clear: both;
 }
 
-.remove_ul_left {
+.ul_left_small {
   -webkit-padding-start: 15px;
 }
 
-.padd_top {
-  padding-top: 20px !important;
+.subsection {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .disabled {
