--- a/console/src/components/Common/DataDropdown/DataDropdown.scss
+++ b/console/src/components/Common/DataDropdown/DataDropdown.scss
@@ -1,11 +1,11 @@
 .data_dropdown_wrapper {
   display: inline-block;
-  cursor: pointer;
+  // cursor: pointer;
   span {
     position: relative;
     .dropdown_wrapper {
       border-radius: 5px;
-      width: 200px;
+      width: 175px;
       position: absolute;
       padding-inline-start: 0px;
       box-shadow: 7px 7px 20px 0 rgba(0, 0, 0, 0.32);
@@ -15,14 +15,19 @@
       left: 35px;
       z-index: 100000000;
       li {
+        display: flex;
+        align-items: center;
         list-style-type: none;
         color: #303030;
         text-align: left;
-        padding: 14px 20px;
+        padding: 10px 15px;
         border-bottom: 1px solid #ededed;
-        &:hover {
-          font-weight: bold;
+        button {
+          margin-right: 5px;
         }
+        // &:hover {
+        //   background-color: #eee;
+        // }
       }
       li:last-child {
         border-bottom: none;
