Event triggers update

--- a/console/src/components/Common/Dropdown/Dropdown.scss
+++ b/console/src/components/Common/Dropdown/Dropdown.scss
@@ -13,6 +13,7 @@
       color: yellow;
       top: -12px;
       left: 35px;
+      -webkit-padding-start: 0px;
       z-index: 100000000;
       li {
         display: flex;
