add manual trigger options

--- a/console/src/components/Services/EventTrigger/TableCommon/EventTable.scss
+++ b/console/src/components/Services/EventTrigger/TableCommon/EventTable.scss
@@ -10,14 +10,8 @@
 }
 
 .manualInvocationCheckbox {
-  margin-bottom: 20px;
-  label {
-    cursor: pointer;
-  }
-  .manualInvocationInfo {
-    margin-left: 10px;
-    position: relative;
-  }
+  margin-left: 75px;
+  display: inline-block;
 }
 
 .settingsSection {
