--- a/console/src/components/Common/TableCommon/ReactTableOverrides.css
+++ b/console/src/components/Common/TableCommon/ReactTableOverrides.css
@@ -97,7 +97,7 @@
   background-color: #ededed !important;
   color: #4d4d4d;
   font-weight: 600 !important;
-  border-bottom: 2px solid #ddd;
+  border-bottom: 0px solid #ddd;
   text-align: left;
 }
 
@@ -114,10 +114,6 @@
 .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even .rt-td:first-child {
   flex: 24 0 auto !important;
   min-width: 150px;
-}
-
-.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd:hover {
-  background-color: #ebf7de;
 }
 
 .ReactTable .rt-table .rt-tbody {
@@ -139,11 +135,30 @@
 .ReactTable .rt-tbody .rt-tr-group:last-child {
   border-bottom: solid 1px rgba(0, 0, 0, 0.05);
 }
-
-.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even:hover {
-  background-color: #ebf7de;
+/* Newly added */
+.ReactTable .rt-thead .rt-tr
+{
+  border-left: 4px solid #ededed;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+  z-index: 100;
 }
-
+/* Newly added */
+.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even, .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd {
+  background-color: #fff;
+  border-left: 4px solid transparent;
+}
+.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even:hover {
+  /* background-color: #ebf7de; */
+  /* Newly added */
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16);
+  border-left: 4px solid #f8d721;
+}
+.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd:hover {
+  /* background-color: #ebf7de; */
+  /* Newly added */
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16);
+  border-left: 4px solid #f8d721;
+}
 .ReactTable .rt-table .rt-tbody {
   overflow-x: hidden !important;
   min-width: fit-content !important;
